--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Use fully qualified domain names. Set to DOMAIN=local if SSL_TYPE=selfsign.
-DOMAIN=your.domain.com
+DOMAIN=odkme.z0in.cc
 
 # Used for Let's Encrypt expiration emails and Enketo technical support emails
-SYSADMIN_EMAIL=administrator@email.com
+SYSADMIN_EMAIL=admin@z0in.cc
 
 # Options: letsencrypt, customssl, upstream, selfsign
 SSL_TYPE=letsencrypt
