--- a/docker-compose _zain.yml
+++ b/docker-compose _zain.yml
@@ -1,38 +1,12 @@
 version: "3"
 services:
   postgres14:
-    build:
-      context: .
-      dockerfile: postgres14.dockerfile
     volumes:
       - postgres14:/var/lib/odk/postgresql/14
     environment:
-      POSTGRES_USER: odk
-      POSTGRES_PASSWORD: odk
-      POSTGRES_DB: odk
-    restart: always
-  postgres:
-    # This service upgrades from postgres 9.6 to 14.
-    # The legacy name must be maintained to allow access to the anonymous volume.
-    build:
-      context: .
-      dockerfile: postgres-upgrade.dockerfile
-    volumes:
-      - /var/lib/postgresql/data
-      - postgres14:/var/lib/postgresql/14
-      - ./files/postgres14/upgrade:/postgres14-upgrade
-    environment:
-      PGUSER: odk
-      POSTGRES_INITDB_ARGS: -U odk
-      POSTGRES_PASSWORD: odk
-      POSTGRES_DB: odk
-  mail:
-    image: "ixdotai/smtp:v0.2.0"
-    volumes:
-      - ./files/dkim/config:/etc/exim4/_docker_additional_macros:ro
-      - ./files/dkim/rsa.private:/etc/exim4/domain.key:ro
-    environment:
-      - MAILNAME=${DOMAIN}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: zain
+      POSTGRES_DB: odk_db
     restart: always
   service:
     build:
@@ -41,7 +15,6 @@ services:
     depends_on:
       - secrets
       - postgres14
-      - mail
       - pyxform
       - enketo
     volumes:
