--- a/.env
+++ b/.env
@@ -15,10 +15,10 @@ HTTPS_PORT=443
 # SERVICE_NODE_OPTIONS=
 
 # Optional: connect to a custom database server
-# DB_HOST=
-# DB_USER=
-# DB_PASSWORD=
-# DB_NAME=
+DB_HOST=citusdb_odk
+DB_USER=postgres
+DB_PASSWORD=zain
+DB_NAME=odk_db
 
 # Optional: configure a custom mail server
 # EMAIL_FROM=
