--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Use fully qualified domain names. Set to DOMAIN=local if SSL_TYPE=selfsign.
-DOMAIN=odkme.z0in.cc
+DOMAIN=odkm.z0in.cc
 
 # Used for Let's Encrypt expiration emails and Enketo technical support emails
 SYSADMIN_EMAIL=admin@z0in.cc
